Add an integration test that runs on JDK-8
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>