@@ -1,6 +1,6 @@
 package org.opensearch.client.opensearch.core;
 
-import java.util.List;
+import java.util.Collections;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -8,7 +8,7 @@ public class ClearScrollRequestTest extends Assert {
 
     @Test
     public void toBuilder() {
-        ClearScrollRequest origin = new ClearScrollRequest.Builder().scrollId(List.of("1")).build();
+        ClearScrollRequest origin = new ClearScrollRequest.Builder().scrollId(Collections.singletonList("1")).build();
         ClearScrollRequest copied = origin.toBuilder().build();
 
         assertEquals(copied.scrollId(), origin.scrollId());
