@@ -2,8 +2,10 @@ package org.opensearch.client.opensearch.core;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import jakarta.json.stream.JsonParser;
 import java.io.StringReader;
-import java.util.List;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 import org.junit.Assert;
 import org.junit.Test;
@@ -16,15 +18,19 @@ public class PutIndexTemplateRequestTest extends Assert {
     @Test
     public void deserialize_validFieldsIncluded_RequestIsBuilt() throws JsonProcessingException {
         final JsonpMapper mapper = new JsonbJsonpMapper();
-        final Map<String, Object> indexTemplateMap = Map.of("name", "test", "index_patterns", "*", "create", true, "priority", 1);
+        final Map<String, Object> indexTemplateMap = new HashMap<>();
+        indexTemplateMap.put("name", "test");
+        indexTemplateMap.put("index_patterns", "*");
+        indexTemplateMap.put("create", true);
+        indexTemplateMap.put("priority", 1);
 
         final String indexTemplate = new ObjectMapper().writeValueAsString(indexTemplateMap);
-        final var parser = mapper.jsonProvider().createParser(new StringReader(indexTemplate));
+        final JsonParser parser = mapper.jsonProvider().createParser(new StringReader(indexTemplate));
 
         final PutIndexTemplateRequest putIndexTemplateRequest = PutIndexTemplateRequest._DESERIALIZER.deserialize(parser, mapper);
 
         assertEquals(putIndexTemplateRequest.name(), "test");
-        assertEquals(putIndexTemplateRequest.indexPatterns(), List.of("*"));
+        assertEquals(putIndexTemplateRequest.indexPatterns(), Collections.singletonList("*"));
         assertEquals((int) putIndexTemplateRequest.priority(), 1);
     }
 
